--- a/index.html
+++ b/index.html
@@ -1,29 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Catalog of Products">
-    <meta name="author" content="Alexander Ganekov">
-    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Catalog of Products" />
+    <meta name="author" content="Alexander Ganekov" />
+
     <title>Catalog of Products</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <header data-bs-theme="dark">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Product Catalog</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">Top Software Colleges</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="category.html">Category</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+              <li class="nav-item">
+                <a class="nav-link active" href="index.html">Public</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="category.html">Private</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -38,7 +55,11 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product1.jpg" class="card-img-top" alt="Product 1">
+                  <img
+                    src="images/product1.jpg"
+                    class="card-img-top"
+                    alt="Product 1"
+                  />
                   <div class="card-body">
                     <p class="card-text">Description</p>
                   </div>
@@ -46,7 +67,11 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product2.jpg" class="card-img-top" alt="Product 2">
+                  <img
+                    src="images/product2.jpg"
+                    class="card-img-top"
+                    alt="Product 2"
+                  />
                   <div class="card-body">
                     <p class="card-text">Description</p>
                   </div>
@@ -54,7 +79,11 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product3.jpg" class="card-img-top" alt="Product 3">
+                  <img
+                    src="images/product3.jpg"
+                    class="card-img-top"
+                    alt="Product 3"
+                  />
                   <div class="card-body">
                     <p class="card-text">Description</p>
                   </div>
@@ -62,7 +91,11 @@
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product4.jpg" class="card-img-top" alt="Product 4">
+                  <img
+                    src="images/product4.jpg"
+                    class="card-img-top"
+                    alt="Product 4"
+                  />
                   <div class="card-body">
                     <p class="card-text">Description</p>
                   </div>
@@ -76,7 +109,9 @@
 
     <footer class="text-center py-3 bg-dark text-light">
       <div class="container">
-        <p>COM S/SE 3190 | Alexander Ganekov | aganekov@iastate.edu | Spring 2025</p>
+        <p>
+          COM S/SE 3190 | Alexander Ganekov | aganekov@iastate.edu | Spring 2025
+        </p>
       </div>
     </footer>
   </body>
