Write public page

--- a/index.html
+++ b/index.html
@@ -38,33 +38,54 @@
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product1.jpg" class="card-img-top" alt="Product 1">
+                  <img src="./images/iowastate.jpg" class="card-img-top" alt="Product 1">
                   <div class="card-body">
-                    <p class="card-text">Description</p>
+                    <p class="card-text">
+                        <strong>Iowa State University</strong><br>
+                        Iowa State University is a leader in software innovation, offering cutting-edge programs in computer science, software engineering, and 
+                        cybersecurity. With state-of-the-art research labs, hands-on learning experiences, and strong industry connections, students gain the 
+                        skills needed to excel in the fast-paced tech world. Whether developing AI solutions or working on real-world applications, Cyclones 
+                        graduate ready to lead in the software industry.</p>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product2.jpg" class="card-img-top" alt="Product 2">
+                  <img src="./images/uofi.jpg" class="card-img-top" alt="Product 2">
                   <div class="card-body">
-                    <p class="card-text">Description</p>
+                    <p class="card-text">
+                        <strong>University of Illinois</strong><br>
+                        The University of Illinois at Urbana-Champaign is home to one of the top-ranked computer science and software engineering programs in the 
+                        country. With a strong emphasis on artificial intelligence, cloud computing, and cybersecurity, UIUC provides students with access to 
+                        groundbreaking research and collaborations with leading tech companies. Graduates leave with the expertise and connections to drive 
+                        innovation in the software industry.
+                    </p>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product3.jpg" class="card-img-top" alt="Product 3">
+                  <img src="./images/uofk.jpg" class="card-img-top" alt="Product 3">
                   <div class="card-body">
-                    <p class="card-text">Description</p>
+                    <p class="card-text">
+                        <strong>University of Kansas</strong><br>
+                        The University of Kansas prepares students for success in software development with top-tier programs in computer science, information 
+                        systems, and software engineering. KU offers hands-on experience in areas like mobile app development, cloud computing, and cybersecurity. 
+                        With strong industry partnerships and a collaborative learning environment, Jayhawks graduate with the skills to shape the future of 
+                        technology.</p>
                   </div>
                 </div>
               </div>
               <div class="col">
                 <div class="card shadow-sm">
-                  <img src="images/product4.jpg" class="card-img-top" alt="Product 4">
+                  <img src="./images/iubloom.jpg" class="card-img-top" alt="Product 4">
                   <div class="card-body">
-                    <p class="card-text">Description</p>
+                    <p class="card-text">
+                        <strong>Indiana University Bloomington</strong><br>
+                        Indiana University Bloomington offers a forward-thinking approach to software development through its renowned informatics, computer science, 
+                        and data science programs. With hands-on learning in fields like game design, cybersecurity, and AI, IU equips students with the tools to 
+                        build the next generation of technology. Hoosiers gain industry experience and career-ready skills to make an impact in the software world.</p>
+                    
                   </div>
                 </div>
               </div>
@@ -76,7 +97,7 @@
 
     <footer class="text-center py-3 bg-dark text-light">
       <div class="container">
-        <p>COM S/SE 3190 | Alexander Ganekov | aganekov@iastate.edu | Spring 2025</p>
+        <p>COM S/SE 3190 | Alexander Ganekov & Noah Wons | aganekov@iastate.edu & wons123@iastate.edu | Spring 2025</p>
       </div>
     </footer>
   </body>
