Write private page

--- a/category.html
+++ b/category.html
@@ -1,29 +1,46 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Category Page">
-    <meta name="author" content="Alexander Ganekov">
-    
-    <title>Product Category</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Category Page" />
+    <meta name="author" content="Alexander Ganekov" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Private</title>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Product Catalog</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">Top Software Colleges</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link active" href="category.html">Category</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Public</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="category.html">Private</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -33,37 +50,122 @@
     <main>
       <div class="album py-5 bg-body-tertiary">
         <div class="container">
-          <h1 class="text-center mb-4">Category</h1>
+          <h1 class="text-center mb-4">Private Colleges</h1>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="images/category_product1.jpg" class="card-img-top" alt="Product">
+                <img src="git_campus.jpeg" class="card-img-top" alt="Product" />
                 <div class="card-body">
-                  <p class="card-text">Description</p>
+                  <p class="card-text">
+                    <strong>Georgia Institute of Technology</strong> <br />
+                    The Georgia Institute of Technology boasts one of the
+                    strongest computer science programs in the world,
+                    consistently ranking among the top institutions for
+                    computing and artificial intelligence. Housed in the College
+                    of Computing, the program offers a flexible and rigorous
+                    curriculum with specializations in areas such as artificial
+                    intelligence, cybersecurity, machine learning,
+                    human-computer interaction, and data science. Georgia Tech
+                    is also a pioneer in online education, offering the highly
+                    regarded Online Master of Science in Computer Science
+                    (OMSCS), making advanced education in computing more
+                    accessible. With strong ties to industry leaders like
+                    Google, Microsoft, and IBM, as well as cutting-edge research
+                    in robotics, AI, and quantum computing, Georgia Tech
+                    provides students with unparalleled opportunities for
+                    innovation and career advancement.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="images/category_product2.jpg" class="card-img-top" alt="Product">
+                <img
+                  src="stanford_campus.jpg"
+                  class="card-img-top"
+                  alt="Product"
+                />
                 <div class="card-body">
-                  <p class="card-text">Description</p>
+                  <p class="card-text">
+                    <strong>Stanford University</strong> <br />
+                    Stanford University is home to one of the most prestigious
+                    computer science programs in the world, consistently ranking
+                    among the top for artificial intelligence, machine learning,
+                    cybersecurity, and software engineering. Located in the
+                    heart of Silicon Valley, Stanford offers students
+                    unparalleled access to leading tech companies, startups, and
+                    groundbreaking research opportunities. The Stanford AI Lab,
+                    Human-Centered AI Institute, and Computer Security Lab are
+                    at the forefront of technological advancements, pushing the
+                    boundaries of innovation. With a curriculum that blends
+                    theory and hands-on application, Stanford’s program produces
+                    some of the most influential figures in tech, including the
+                    founders of Google, Yahoo, and Netflix. Its strong
+                    entrepreneurial culture, cutting-edge faculty, and deep
+                    industry connections make Stanford a powerhouse in shaping
+                    the future of computing.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="images/category_product3.jpg" class="card-img-top" alt="Product">
+                <img
+                  src="universitymichigan_campus.jpeg"
+                  class="card-img-top"
+                  alt="Product"
+                />
                 <div class="card-body">
-                  <p class="card-text">Description</p>
+                  <p class="card-text">
+                    <strong>University of Michigan</strong> <br />
+                    The University of Michigan offers a top-tier computer
+                    science program, known for its excellence in artificial
+                    intelligence, cybersecurity, data science, and software
+                    engineering. Housed within the College of Engineering and
+                    the College of Literature, Science, and the Arts (LSA), the
+                    program provides students with a flexible, interdisciplinary
+                    curriculum that blends rigorous theory with hands-on
+                    application. Michigan’s Artificial Intelligence Lab,
+                    Michigan Robotics, and CSE Security Lab drive cutting-edge
+                    research in fields like autonomous systems, human-computer
+                    interaction, and quantum computing. With strong industry
+                    connections to companies like Google, Amazon, and Ford, as
+                    well as a thriving startup ecosystem in Ann Arbor, Michigan
+                    offers students exceptional opportunities for internships,
+                    research, and career advancement in the ever-evolving tech
+                    landscape.
+                  </p>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card shadow-sm">
-                <img src="images/category_product4.jpg" class="card-img-top" alt="Product">
+                <img
+                  src="carnegiemellonuniversity_campus.webp"
+                  class="card-img-top"
+                  alt="Product"
+                />
                 <div class="card-body">
-                  <p class="card-text">Description</p>
+                  <p class="card-text">
+                    <strong>Carnegie Mellon University</strong> <br />
+                    Carnegie Mellon University (CMU) is home to one of the
+                    world’s most prestigious computer science programs,
+                    consistently ranked among the best for artificial
+                    intelligence, cybersecurity, robotics, and software
+                    engineering. Housed in the School of Computer Science (SCS),
+                    CMU’s program is renowned for its rigorous curriculum,
+                    cutting-edge research, and close ties to industry leaders
+                    like Google, Apple, and Microsoft. The university is a
+                    global leader in AI and robotics, with institutions like the
+                    Machine Learning Department, Robotics Institute, and CyLab
+                    Security and Privacy Institute driving breakthroughs in
+                    autonomous systems, cybersecurity, and human-computer
+                    interaction. With a strong culture of innovation,
+                    interdisciplinary collaboration, and entrepreneurial
+                    support, CMU produces some of the most influential minds in
+                    tech, shaping the future of computing and artificial
+                    intelligence.
+                  </p>
                 </div>
               </div>
             </div>
@@ -73,7 +175,9 @@
     </main>
 
     <footer class="text-center py-3 bg-dark text-light">
-      <p>COM S/SE 3190 | Alexander Ganekov | aganekov@iastate.edu | Spring 2025</p>
+      <p>
+        COM S/SE 3190 | Alexander Ganekov | aganekov@iastate.edu | Spring 2025
+      </p>
     </footer>
   </body>
 </html>
