--- a/about.html
+++ b/about.html
@@ -1,14 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" data-bs-theme="auto">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="About Page">
-    <meta name="author" content="Alexander Ganekov">
-    
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="About Page" />
+    <meta name="author" content="Alexander Ganekov" />
+
     <title>About</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
@@ -16,14 +19,28 @@
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <a class="navbar-brand" href="#">Product Catalog</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="category.html">Category</a></li>
-              <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="category.html">Category</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="about.html">About</a>
+              </li>
             </ul>
           </div>
         </div>
@@ -35,13 +52,19 @@
         <h1 class="text-center mb-4">About This Project</h1>
         <div class="row">
           <div class="col-md-8 mx-auto">
-            <p>
-              Assignment Description
-            </p>
+            <p>Assignment Description</p>
             <h3>Student Information</h3>
             <ul>
               <li><strong>Name:</strong> Alexander Ganekov</li>
-              <li><strong>Email:</strong> <a href="mailto:aganekov@iastate.edu">aganekov@iastate.edu</a></li>
+              <li>
+                <strong>Email:</strong>
+                <a href="mailto:aganekov@iastate.edu">aganekov@iastate.edu</a>
+              </li>
+              <li><strong>Name:</strong> Noah Wons</li>
+              <li>
+                <strong>Email:</strong>
+                <a href="mailto:wons123@iastate.edu">wons123@iastate.edu</a>
+              </li>
             </ul>
           </div>
         </div>
