Resolve merge conflict

--- a/about.html
+++ b/about.html
@@ -40,14 +40,24 @@
             </p>
             <h3>Student Information</h3>
             <ul>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <footer class="text-center py-3 bg-dark text-light">
-      <p>COM S/SE 3190 | Alexander Ganekov & Noah Wons | aganekov@iastate.edu & wons123@iastate.edu</p>
-    </footer>
-  </body>
-</html>
+                              <li><strong>Name:</strong> Alexander Ganekov</li>
+                              <li>
+                                <strong>Email:</strong>
+                                <a href="mailto:aganekov@iastate.edu">aganekov@iastate.edu</a>
+                              </li>
+                              <li><strong>Name:</strong> Noah Wons</li>
+                              <li>
+                                <strong>Email:</strong>
+                                <a href="mailto:wons123@iastate.edu">wons123@iastate.edu</a>
+                              </li>
+                            </ul>
+                          </div>
+                        </div>
+                      </div>
+                    </main>
+                
+                    <footer class="text-center py-3 bg-dark text-light">
+                      <p>COM S/SE 3190 | Alexander Ganekov & Noah Wons | aganekov@iastate.edu & wons123@iastate.edu</p>
+                    </footer>
+                  </body>
+                </html>
