--- a/category.html
+++ b/category.html
@@ -54,7 +54,7 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col">
               <div class="card shadow-sm">
-                <img src="git_campus.jpeg" class="card-img-top" alt="Product" />
+                <img src="images/git_campus.jpeg" class="card-img-top" alt="Product" />
                 <div class="card-body">
                   <p class="card-text">
                     <strong>Georgia Institute of Technology</strong> <br />
@@ -81,7 +81,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="stanford_campus.jpg"
+                  src="images/stanford_campus.jpg"
                   class="card-img-top"
                   alt="Product"
                 />
@@ -111,7 +111,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="universitymichigan_campus.jpeg"
+                  src="images/universitymichigan_campus.jpeg"
                   class="card-img-top"
                   alt="Product"
                 />
@@ -141,7 +141,7 @@
             <div class="col">
               <div class="card shadow-sm">
                 <img
-                  src="carnegiemellonuniversity_campus.webp"
+                  src="images/carnegiemellonuniversity_campus.webp"
                   class="card-img-top"
                   alt="Product"
                 />
