--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Product Catalog</a>
+          <a class="navbar-brand" href="#">Top Software Colleges</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
+                <a class="nav-link" href="index.html">Public</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html">Category</a>
+                <a class="nav-link" href="category.html">Private</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
