--- a/about.html
+++ b/about.html
@@ -66,6 +66,11 @@
                 <a href="mailto:wons123@iastate.edu">wons123@iastate.edu</a>
               </li>
             </ul>
+            <h3>Instructor Information</h3>
+            <ul>
+              <li>Name: Dr. Ali Jannesari, Email: jannesar@iastate.edu</li>
+              <li>Name: Dr. Abrahan Adalco, Email: aaldaco@iastate.edu</li>
+            </ul>
           </div>
         </div>
       </div>
