--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a class="navbar-brand" href="#">Top Software Colleges</a>
+          <a class="navbar-brand" href="#">Product Catalog</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -33,10 +33,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="index.html">Public</a>
+                <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="category.html">Private</a>
+                <a class="nav-link" href="category.html">Category</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="about.html">About</a>
@@ -65,6 +65,11 @@
                 <strong>Email:</strong>
                 <a href="mailto:wons123@iastate.edu">wons123@iastate.edu</a>
               </li>
+            </ul>
+            <h3>Instructor Information</h3>
+            <ul>
+              <li>Name: Dr. Ali Jannesari, Email: jannesar@iastate.edu</li>
+              <li>Name: Dr. Abrahan Adalco, Email: aaldaco@iastate.edu</li>
             </ul>
           </div>
         </div>
